<resources>
    <string name="app_name">得胜会议管理系统</string>
    <string name="error_0">平台初始化成功</string>
    <string name="error_1">过期了</string>
    <string name="error_2">程序出错</string>
    <string name="error_3">不允许接入的企业</string>
    <string name="error_4">没有多余的设备ID了</string>
    <string name="error_5">不允许接入的设备</string>
    <string name="error_6">文件数据错误</string>
    <string name="error_7">非法的设备</string>
    <string name="error_8">设备ID已经被使用了</string>
    <string name="error_9">不存在的需要的资源</string>
    <string name="error_10">文件数据错误,但可以解析出原设备ID</string>
    <string name="error_11">指定设备与设备类型不匹配</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="system_settings">系统设置</string>
    <string name="please_enter_name_and_password">请输入用户名和密码</string>
    <string name="login_successful">登录成功</string>
    <string name="wrong_password">密码错误</string>
    <string name="server_exception">服务器异常</string>
    <string name="database_exception">数据库异常</string>
    <string name="conference_management_system">会议管理系统</string>
    <string name="meeting_reservation">会议预约</string>
    <string name="before_meeting">会前设置</string>
    <string name="current_meeting">会中管理</string>
    <string name="after_meeting">会后查看</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="device_management">设备管理</string>
    <string name="meeting_room_management">会议室管理</string>
    <string name="seat_arrangement">座位排布</string>
    <string name="secretary_management">秘书管理</string>
    <string name="commonly_participant">常用参会人</string>
    <string name="other_setting">其它设置</string>
    <string name="meeting_management">会议管理</string>
    <string name="meeting_member">参会人员</string>
    <string name="camera_management">摄像机管理</string>
    <string name="vote_entry">投票录入</string>
    <string name="election_entry">选举录入</string>
    <string name="score_entry">评分录入</string>
    <string name="seat_bind">座位绑定</string>
    <string name="table_display">桌牌显示</string>
    <string name="meeting_function">会议功能</string>
    <string name="device_control">设备控制</string>
    <string name="vote_management">投票管理</string>
    <string name="election_management">选举管理</string>
    <string name="score_management">评分管理</string>
    <string name="meeting_chat">会议交流</string>
    <string name="camera_control">摄像头控制</string>
    <string name="screen_management">屏幕管理</string>
    <string name="meeting_minutes">会议记录</string>
    <string name="sign_in_info">签到情况</string>
    <string name="annotation_view">批注查看</string>
    <string name="vote_result">投票结果</string>
    <string name="election_result">选举结果</string>
    <string name="meeting_archive">会议归档</string>
    <string name="meeting_statistics">会议统计</string>
    <string name="score_view">评分查看</string>
    <string name="video_management">录像管理</string>
    <string name="modify">修改</string>
    <string name="number">序号</string>
    <string name="device_id">设备ID</string>
    <string name="device_name">设备名称</string>
    <string name="device_type">设备类型</string>
    <string name="version_number">版本号</string>
    <string name="device_ip">设备IP</string>
    <string name="device_port">设备端口</string>
    <string name="guest_mode">访客模式</string>
    <string name="device_status">设备状态</string>
    <string name="interface_status">界面状态</string>
    <string name="lift_id">升降机ID</string>
    <string name="mic_id">话筒ID</string>
    <string name="delete">删除</string>
    <string name="set_guest_mode">设置访客模式</string>
    <string name="parameter_configuration">参数配置</string>
    <string name="platform_testing">平台测试</string>
    <string name="database_dev">会议数据库</string>
    <string name="tea_dev">会议茶水设备</string>
    <string name="pro_dev">会议投影设备</string>
    <string name="capture_dev">会议流采集设备</string>
    <string name="client_dev">会议终端设备</string>
    <string name="video_chat_dev">视频对讲客户端</string>
    <string name="release_dev">会议发布设备</string>
    <string name="screen_dev">一键同屏设备</string>
    <string name="face_main">主界面</string>
    <string name="face_meet">会议界面</string>
    <string name="face_back">后台界面</string>
    <string name="face_vote">投票界面</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="please_select_device_first">请先选择设备</string>
    <string name="cancel">取消</string>
    <string name="define">确定</string>
    <string name="device_name_">设备名称：</string>
    <string name="device_ip_">设备IP：</string>
    <string name="lift_id_">升降机ID：</string>
    <string name="mic_id_">话筒ID：</string>
    <string name="please_enter_device_name">请输入设备名称</string>
    <string name="delete_device_hint">确定要删除此设备吗？</string>
    <string name="normal_mode">正常模式</string>
    <string name="please_select_the_conference_terminal_device">请选择会议终端设备</string>
    <string name="please_select_offline_device">请选择离线设备</string>
    <string name="server_ip_">服务器IP：</string>
    <string name="port_">端口号：</string>
    <string name="cache_location_">缓存位置：</string>
    <string name="modify_">修改...</string>
    <string name="cache_size_">缓存大小(M)：</string>
    <string name="try_hardware_coding">尝试硬件编码</string>
    <string name="try_hardware_decoding">尝试硬件解码</string>
    <string name="enable_debugging">启用调试</string>
    <string name="open_camera">开启摄像头</string>
    <string name="open_mic">开启麦克风</string>
    <string name="disable_multicast">禁用组播</string>
    <string name="convert_smooth_formats">上传高清视频时转换流畅格式</string>
    <string name="enable_tcp">启用TCP</string>
    <string name="coding_mode_">编码模式：</string>
    <string name="screen_stream_">桌面同屏流：</string>
    <string name="camera_stream_">摄像头流：</string>
    <string name="device_select_all">设备全选</string>
    <string name="terminal_reboot_after_modification">修改后终端重启</string>
    <string name="parameters_select_all">参数全选</string>
    <string name="ip_address_format_error">IP地址格式错误</string>
    <string name="please_enter_port_first">请先输入端口号</string>
    <string name="please_choose_cache_dir_first">请先设置缓存位置</string>
    <string name="please_enter_cache_size_first">请先输入缓存大小</string>
    <string name="please_choose_modify_param">请选择要修改的内容</string>
    <string name="choose_cache_dir">选择缓存目录</string>
    <string name="current_dir_root">当前已经是根目录</string>
    <string name="exit">退出</string>
    <string name="lift_test">全升降测试(单位秒)：</string>
    <string name="already_test">已测试 %1$d 次</string>
    <string name="start">开始</string>
    <string name="please_enter_second_first">请先输入秒数</string>
    <string name="default_already_test">已测试0次</string>
    <string name="add">增加</string>
    <string name="meeting_room_name">会议室名称</string>
    <string name="meeting_room_location">会议室地点</string>
    <string name="operation">操作</string>
    <string name="remarks">备注</string>
    <string name="meeting_room_name_">会议室名称：</string>
    <string name="meeting_room_location_">会议室地址：</string>
    <string name="remarks_">备注：</string>
    <string name="please_enter_the_content_to_be_modified">请输入要修改的内容</string>
    <string name="delete_meeting_room_hint">确定要删除此会议室吗？</string>
    <string name="delete_user_hint">确定要删除此用户吗？</string>
    <string name="delete_attendee_hint">确定要删除此参会人吗？</string>
    <string name="meeting_room_device">会议室设备</string>
    <string name="optional_equipment">可选设备</string>
    <string name="add_">&#060;&#060;添加</string>
    <string name="add_all_">&#060;&#060;添加全部</string>
    <string name="remove_">移除&#062;&#062;</string>
    <string name="remove_all_">移除全部&#062;&#062;</string>
    <string name="modified_successfully">修改成功</string>
    <string name="no_changes">没有任何变更</string>
    <string name="seat_bg_specification">规格：1300*760 格式：png</string>
    <string name="please_choose_seat">请选择席位</string>
    <string name="display_icon">显示图标</string>
    <string name="top">上</string>
    <string name="bottom">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="left_side_alignment">左侧对齐</string>
    <string name="bottom_side_alignment">底部对齐</string>
    <string name="preview_base_image">预览底图</string>
    <string name="save_base_image">保存底图</string>
    <string name="restore">还原</string>
    <string name="file_downloaded_percent">%1$s已下载%2$s</string>
    <string name="seat_count_">席位数量：%1$d</string>
    <string name="upload">上传</string>
    <string name="name">名称</string>
    <string name="please_choose_file_first">请先选择文件</string>
    <string name="can_only_choose_one">只能选择一个</string>
    <string name="upload_completed">%1$s上传完毕</string>
    <string name="please_choose_png_file">请选择png格式的图片</string>
    <string name="please_choose_room_first">请先选择会议室</string>
    <string name="phone">手机</string>
    <string name="email">邮箱</string>
    <string name="permission_management">权限管理</string>
    <string name="user_name_">用户名：</string>
    <string name="password_">密码：</string>
    <string name="phone_">手机：</string>
    <string name="email_">邮箱：</string>
    <string name="user_name_can_not_empty">用户名必须填写</string>
    <string name="required_fields">必填项</string>
    <string name="controlled_venue">可控会场</string>
    <string name="optional_venue">可选会场</string>
    <string name="venue_name">会场名称</string>
    <string name="venue_address">会场地址</string>
    <string name="please_select_venue_first">请先选择会场</string>
    <string name="unable_to_modify_root_account">不能修改root账户</string>
    <string name="import_from_excel">从Excel导入</string>
    <string name="export_to_excel">导出到Excel</string>
    <string name="unit">单位</string>
    <string name="job">职位</string>
    <string name="sign_in_password">签到密码</string>
    <string name="name_">名称：</string>
    <string name="unit_">单位：</string>
    <string name="job_">职位：</string>
    <string name="sign_in_password_">签到密码：</string>
    <string name="export_successful">导出成功</string>
    <string name="member_role_ordinary">普通参会人</string>
    <string name="member_role_host">主持人</string>
    <string name="member_role_secretary">秘书</string>
    <string name="member_role_admin">管理员</string>
    <string name="none">无</string>
    <string name="personal_password_signin">个人密码签到</string>
    <string name="meeting_password_signin">会议密码签到</string>
    <string name="meeting_password_and_handwriting_signin">会议密码和手写签到</string>
    <string name="personal_password_and_handwriting_signin">个人密码和手写签到</string>
    <string name="handwriting_signin">手写签到</string>
    <string name="password_signin">密码签到</string>
    <string name="direct_signin">直接签到</string>
    <string name="please_choose_xls_file">请选择xls表格文件</string>
    <string name="tip_data_empty">当前没有数据</string>
    <string name="meeting_setting">会议设置</string>
    <string name="website_">网址：</string>
    <string name="submit">提交</string>
    <string name="company_name_">公司名：</string>
    <string name="company_release_file_">公司发布文件：</string>
    <string name="password_modify">密码修改</string>
    <string name="old_password_">旧密码：</string>
    <string name="new_password_">新密码：</string>
    <string name="ensure_new_password_">确认新密码：</string>
    <string name="member_role">参会人角色</string>
    <string name="sort">排序</string>
    <string name="export_commonly">常用人导出</string>
    <string name="import_commonly">导入常用人</string>
    <string name="member_permission">参会人权限</string>
    <string name="member">参会人</string>
    <string name="whether_to_open_the_document_externally">是否外部打开文档</string>
    <string name="rise">上升</string>
    <string name="end">停止</string>
    <string name="down">下降</string>
    <string name="software_reboot">软件重开</string>
    <string name="reboot">重启</string>
    <string name="shutdown">关机</string>
    <string name="assisted_check_in">辅助签到</string>
    <string name="administrator_settings">管理员设定</string>
    <string name="network_wake_up">网络唤醒</string>
    <string name="open_the_document_externally">外部打开文档</string>
    <string name="bandwidth_testing">带宽测试</string>
</resources>