<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_root_padding"
    android:background="@drawable/bg_ic_fragment_root"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/top_view_marginBottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            style="@style/button_solid_style_rect_blue_white_radius5"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/top_view_button_marginEnd"
            android:text="@string/add" />

        <Button
            android:id="@+id/btn_sort"
            style="@style/button_solid_style_rect_blue_white_radius5"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/top_view_button_marginEnd"
            android:text="@string/sort" />

        <Button
            android:id="@+id/btn_import"
            style="@style/button_solid_style_rect_blue_white_radius5"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/top_view_button_marginEnd"
            android:text="@string/import_from_excel" />

        <Button
            android:id="@+id/btn_export"
            style="@style/button_solid_style_rect_blue_white_radius5"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/top_view_button_marginEnd"
            android:text="@string/export_to_excel" />

        <Button
            android:id="@+id/btn_export_commonly"
            style="@style/button_solid_style_rect_blue_white_radius5"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/top_view_button_marginEnd"
            android:text="@string/export_commonly" />

        <Button
            android:id="@+id/btn_import_commonly"
            style="@style/button_solid_style_rect_blue_white_radius5"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/top_view_button_marginEnd"
            android:text="@string/import_commonly" />

        <Button
            android:id="@+id/btn_permission"
            style="@style/button_solid_style_rect_blue_white_radius5"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/top_view_button_marginEnd"
            android:text="@string/member_permission" />

        <Button
            android:id="@+id/btn_role"
            style="@style/button_solid_style_rect_blue_white_radius5"
            android:layout_width="wrap_content"
            android:text="@string/member_role" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_view_height"
        android:background="@color/rv_top_view_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/number"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/unit"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/job"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_in_password"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/operation"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/remarks"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>